--- a/WebCalc/Views/Shared/_Layout.cshtml
+++ b/WebCalc/Views/Shared/_Layout.cshtml
@@ -21,9 +21,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
-                    <li>@Html.ActionLink("О программе", "About", "Home")</li>
-                    <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Пользователи", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Операции", "Index", "Operation")</li>
+                    <li>@Html.ActionLink("Операции пользоватлей", "Index", "OperationResult")</li>
+                    <li>@Html.ActionLink("Любимые Операции пользоватлей", "Index", "UserFavoriteResult")</li>
                 </ul>
             </div>
         </div>
