--- a/WebCalc/Views/Home/Index.cshtml
+++ b/WebCalc/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
 <div class="container" style="margin-top:20px;">
     <div class="row">
 
-        @foreach (var user in ViewBag.Users)
+        @foreach (var user in ViewBag.Users as IEnumerable<DomainModels.Models.User>)
         {
-           <p><a href="">@user.FIO</a></p>
+           <p>@Html.ActionLink(user.FIO, "View", new { user.Id }) </p>
         }
 
     </div>
