--- a/WebCalc/Views/Calc/Index.cshtml
+++ b/WebCalc/Views/Calc/Index.cshtml
@@ -44,7 +44,7 @@
                 @Html.DisplayFor(model => model.Result, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
-
+        @Html.CheckBoxFor(model => model.IsCompute, new { htmlAttributes = new { @class = "form-control" } })
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Вычислить" class="btn btn-default" />
